@@ -1,12 +1,12 @@
 ---
 name: Bot-BasicBot-Pluggable-Module-Log
-version: 0.05
+version: 0.07
 author:
   - 'Mario Domgoergen <dom@math.uni-bonn.de>'
 abstract: Provide logging for Bot::BasicBot::Pluggable
 license: perl
 resources:
-  license: http://dev.perl.org/licenses/
+  license: ~
 requires:
   Bot::BasicBot::Pluggable: 0.60
   File::Spec: 0
@@ -17,8 +17,8 @@ build_requires:
 provides:
   Bot::BasicBot::Pluggable::Module::Log:
     file: lib/Bot/BasicBot/Pluggable/Module/Log.pm
-    version: 0.05
-generated_by: Module::Build version 0.3
+    version: 0.07
+generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
