@@ -1,8 +1,7 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.30
+# Note: this file was auto-generated by Module::Build::Compat version 0.32
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'PL_FILES' => {},
           'INSTALLDIRS' => 'site',
           'NAME' => 'Bot::BasicBot::Pluggable::Module::Log',
           'EXE_FILES' => [],
